# stardump

./: .dockerignore  .gcloudignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
render-check/: brightness.ts  compare.js  compare.ts  package-lock.json  package.json  render-exact.js  render-exact.ts  render-fast.js  render-fast.ts  render.js  render.ts  tsconfig.json
sh/: build-image.sh  build-index-job-entrypoint.sh  build-starcloud-job-entrypoint.sh  convert.sh  deploy-build-index-job.sh  deploy-build-starcloud-job.sh  deploy-ingest-job.sh  deploy-service.sh  deploy.sh  ingest-job-entrypoint.sh  push-image.sh  render.sh  setup-gcloud.sh  start-full-ingest.py
src/: build_index.rs  build_starcloud.rs  e2e_tests.rs  formats.rs  ingest.rs  lib.rs  octree.rs  quality.rs  query_api.rs  starcloud.rs  storage.rs  vec3.rs
stardump/: __init__.py  __main__.py  full_ingest.py  ingest.py
viewer/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.worker.json
viewer/src/: glsl.d.ts  lod.worker.ts  main.ts  stars.frag.glsl  stars.vert.glsl  tonemap.frag.glsl  tonemap.vert.glsl
