[package]
name = "star-dump"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
csv = "1"
flate2 = "1"
md5 = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors"] }
urlencoding = "2"

[dev-dependencies]
tower = "0.5"
